updated js and html

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <div class="weather" id = "showDescription">Partly Cloud</div>
                     <div class="degreeSec">
                         <div class="dsDegree" id = "showDegree">26</div>
-                        <div class="Celsius" id = "showFahrenheit"> <button onclick="showFahrenheit()">&deg;C </button></div>
+                        <div class="Celsius" id = "showFahrenheit">&deg;C </div>
                         <span>|</span>
                     </div>
                     <p>Enter City Name</p>
