--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <div class="weather" id="showDescription">Partly Cloud</div>
                     <div class="degreeSec">
                         <div class="dsDegree" id="showDegree">26</div>
-                        <div class="Celsius" id="showFahrenheit">&deg;C </div>
+                        <div class="Celsius" id="showFahrenheit"> C </div>
                         <span>|</span>
                     </div>
                     <p>Enter City Name</p>
