--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
                     <div class="weather" id="showDescription">Partly Cloud</div>
                     <div class="degreeSec">
                         <div class="dsDegree" id="showDegree">26</div>
-                        <div class="Celsius" id="showFahrenheit"> C </div>
-                        <span>|</span>
+                        <div class="Celsius" id="showFahrenheit">&deg;C </div>
+                        <!-- <span>|</span> -->
                     </div>
                     <p>Enter City Name</p>
                     <div>
