--- a/index.html
+++ b/index.html
@@ -29,10 +29,11 @@
                     <h3 class="city" id="showCity">Bangalore</h3>, <h3 class="state" id='showCountry' nbsp>Karnataka
                     </h3>
                     <div class="DateTime">
-                        <span class="dtDay">Friday</span>
-                        <span class="dtTime">8:00 am</span>
+                        <!-- <span class="dtDay">Friday</span> -->
+                        <!-- <span class="dtTime">8:00 am</span> -->
                     </div>
                     <div class="weather" id="showDescription">Partly Cloud</div>
+                    <br>
                     <div class="degreeSec">
                         <div class="dsDegree" id="showDegree">26</div>
                         <div class="Celsius" id="showFahrenheit">&deg;C </div>
@@ -40,7 +41,7 @@
                     </div>
                     <p>Enter City Name</p>
                     <div>
-                        <input id="cityName" type="text" name="city" placeholder="City name" list="citylist">
+                        <input id="cityName" type="text" name="city" placeholder="City" list="citylist">
                         <datalist id="citylist">
                             <option value="Bangalore"></option>
                             <option value="Chennai"></option>
