--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     </div>
                     <p>Enter City Name</p>
                     <div>
-                        <input id="cityName" type="text" name="city" placeholder="City" list="citylist">
+                        <input id="cityName" type="text" name="city" placeholder="Cities" list="citylist">
                         <datalist id="citylist">
                             <option value="Bangalore"></option>
                             <option value="Chennai"></option>
