--- a/index.html
+++ b/index.html
@@ -26,17 +26,17 @@
             </div>
             <div class="flex1">
                 <div class="weatherSec">
-                    <h3 class="city" id="showCity"></h3>, <h3 class="state" id='showCountry' nbsp>
+                    <h3 class="city" id="showCity">Bangalore</h3>, <h3 class="state" id='showCountry' nbsp>Karnataka
                     </h3>
                     <div class="DateTime">
                         <!-- <span class="dtDay">Friday</span> -->
                         <!-- <span class="dtTime">8:00 am</span> -->
                     </div>
-                    <div class="weather" id="showDescription"></div>
+                    <div class="weather" id="showDescription">Partly Cloud</div>
                     <br>
                     <div class="degreeSec">
-                        <div class="dsDegree" id="showDegree"></div>
-                        <div class="Celsius" id="showFahrenheit"></div>
+                        <div class="dsDegree" id="showDegree">26</div>
+                        <div class="Celsius" id="showFahrenheit">&deg;C </div>
                         <!-- <span>|</span> -->
                     </div>
                     <p>Enter City Name</p>
