updated function name

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                             <option value="Lucknow"></option>
                             <option value="Patna"></option>
                         </datalist>
-                        <button onclick="weatherBallon()">Search</button>
+                        <button onclick="getWeather()">Search</button>
                     </div>
                 </div>
             </div>
